--- a/index.html
+++ b/index.html
@@ -21,13 +21,23 @@
   </div>
 
   <section class="section-three">
-    <div>
-      <div class="card">
-        <p>Unlock your true potential with magical items tailored to your desire.</p>
-        <p>Wizbangs offers only the highest quality magical items enchanted by the realms most experienced enchanters.
-        </p>
-      </div>
+    <div class="card">
+      <p>Unlock your true potential with magical items tailored to your desire.</p>
+      <p>Wizbangs offers only the highest quality magical items enchanted by the realms most experienced enchanters.
+      </p>
+      <img class="book_1" src="Wizbang Site/assets/book_1.png" alt="an image of a spellbook">
     </div>
+    <section>
+
+    </section class="section-four">
+    <div class="card">
+      <h4>Wicked Weapons</h4>
+      <div class="item-card"></div>
+      <div class="item-card"></div>
+      <div class="item-card"></div>
+      <div class="item-card"></div>
+    </div>
+
   </section>
 
 </body>
